[gd_scene load_steps=9 format=2]

[ext_resource path="res://modules/NPCs/FartBoss/cloud.tres" type="Material" id=1]
[ext_resource path="res://modules/NPCs/FartBoss/Cloud.gd" type="Script" id=2]
[ext_resource path="res://share/audio/Wet Fart 6.wav" type="AudioStream" id=3]

[sub_resource type="SphereMesh" id=1]
radius = 2.0

[sub_resource type="ConvexPolygonShape" id=2]
points = PoolVector3Array( 0.66424, 0.346606, 1.75066, -0.366733, -0.0769605, -1.95706, -0.365711, 0.106115, -1.95161, -1.95707, -0.076961, 0.366663, 0.829769, -0.904208, 0.177508, 1.06293, 0.811762, -0.472361, -0.945618, 0.871677, 0.236266, 1.88387, -0.137017, -0.60715, -0.943663, -0.840496, 0.530683, -0.607704, -0.137031, 1.88366, -0.415626, -0.727454, -1.30616, 1.07212, -0.491444, 1.36964, -1.70105, -0.0763438, -1.03245, 1.74528, 0.285325, 0.782357, 1.08655, -0.196445, -1.62969, -0.415989, 0.698188, -1.36687, -0.592472, 0.695998, 1.30311, 0.652358, 0.87443, 0.711287, 0.954382, 0.461826, -1.4907, -1.48742, 0.520332, -0.832643, -1.67688, 0.343936, 0.838091, -0.059219, -0.728163, 1.36698, 1.06171, -0.722572, -0.884524, 1.73404, -0.433616, 0.478377, -1.48718, -0.609783, -0.535132, -1.48979, -0.432057, 1.01278, -0.237002, -0.963504, -0.473911, 0.118339, 0.932288, -0.710264, 1.67942, 0.404491, -0.719504, 0.787113, -0.136459, 1.81626, -0.965197, 0.225783, 1.68924, 0.47737, -0.492723, -1.67159, -1.07901, -0.314944, -1.55885, -1.19606, 0.283791, -1.49479, -1.86882, 0.346166, -0.120484, 1.42172, 0.636642, 0.591957, 1.5775, -0.0762434, 1.2134, 0.177578, -0.904202, 0.829775, 0.118877, 0.99602, 0.118854, -0.825699, 0.869851, -0.53065, -0.0605223, 0.227223, 1.94395, 0.303458, 0.166434, -1.94449, 1.9445, 0.166435, 0.3034, -1.57748, -0.0762419, 1.21338, 1.67163, -0.492636, -0.477569, -0.894102, -0.492069, 1.4905, 0.301229, -0.31692, 1.86975, 0.592375, 0.63657, 1.42164, 0.355457, -0.844658, -1.00749, 1.26718, 0.165352, -1.50807, 0.415989, 0.698188, -1.36687, 1.19613, 0.283613, 1.49487, -1.54271, -0.608275, 0.355769, -1.94145, -0.19754, -0.242491, -0.236321, 0.871709, 0.945469, -1.4902, 0.640459, 0.357354, -1.00764, -0.844624, -0.355373, 1.06171, -0.722571, 0.884523, 1.36694, -0.728184, 0.0591937, 1.31079, -0.372536, -1.31054, -1.18345, 0.576637, 1.12391, -0.300208, 0.404913, -1.8009, -0.478458, -0.433604, -1.73402, -0.297128, -0.965779, 0.415823 )

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( 0.66424, 0.346606, 1.75066, -0.366733, -0.0769605, -1.95706, -0.365711, 0.106115, -1.95161, -1.95707, -0.076961, 0.366663, 0.829769, -0.904208, 0.177508, 1.06293, 0.811762, -0.472361, -0.945618, 0.871677, 0.236266, 1.88387, -0.137017, -0.60715, -0.943663, -0.840496, 0.530683, -0.607704, -0.137031, 1.88366, -0.415626, -0.727454, -1.30616, 1.07212, -0.491444, 1.36964, -1.70105, -0.0763438, -1.03245, 1.74528, 0.285325, 0.782357, 1.08655, -0.196445, -1.62969, -0.415989, 0.698188, -1.36687, -0.592472, 0.695998, 1.30311, 0.652358, 0.87443, 0.711287, 0.954382, 0.461826, -1.4907, -1.48742, 0.520332, -0.832643, -1.67688, 0.343936, 0.838091, -0.059219, -0.728163, 1.36698, 1.06171, -0.722572, -0.884524, 1.73404, -0.433616, 0.478377, -1.48718, -0.609783, -0.535132, -1.48979, -0.432057, 1.01278, -0.237002, -0.963504, -0.473911, 0.118339, 0.932288, -0.710264, 1.67942, 0.404491, -0.719504, 0.787113, -0.136459, 1.81626, -0.965197, 0.225783, 1.68924, 0.47737, -0.492723, -1.67159, -1.07901, -0.314944, -1.55885, -1.19606, 0.283791, -1.49479, -1.86882, 0.346166, -0.120484, 1.42172, 0.636642, 0.591957, 1.5775, -0.0762434, 1.2134, 0.177578, -0.904202, 0.829775, 0.118877, 0.99602, 0.118854, -0.825699, 0.869851, -0.53065, -0.0605223, 0.227223, 1.94395, 0.303458, 0.166434, -1.94449, 1.9445, 0.166435, 0.3034, -1.57748, -0.0762419, 1.21338, 1.67163, -0.492636, -0.477569, -0.894102, -0.492069, 1.4905, 0.301229, -0.31692, 1.86975, 0.592375, 0.63657, 1.42164, 0.355457, -0.844658, -1.00749, 1.26718, 0.165352, -1.50807, 0.415989, 0.698188, -1.36687, 1.19613, 0.283613, 1.49487, -1.54271, -0.608275, 0.355769, -1.94145, -0.19754, -0.242491, -0.236321, 0.871709, 0.945469, -1.4902, 0.640459, 0.357354, -1.00764, -0.844624, -0.355373, 1.06171, -0.722571, 0.884523, 1.36694, -0.728184, 0.0591937, 1.31079, -0.372536, -1.31054, -1.18345, 0.576637, 1.12391, -0.300208, 0.404913, -1.8009, -0.478458, -0.433604, -1.73402, -0.297128, -0.965779, 0.415823 )

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( 0.66424, 0.346606, 1.75066, -0.366733, -0.0769605, -1.95706, -0.365711, 0.106115, -1.95161, -1.95707, -0.076961, 0.366663, 0.829769, -0.904208, 0.177508, 1.06293, 0.811762, -0.472361, -0.945618, 0.871677, 0.236266, 1.88387, -0.137017, -0.60715, -0.943663, -0.840496, 0.530683, -0.607704, -0.137031, 1.88366, -0.415626, -0.727454, -1.30616, 1.07212, -0.491444, 1.36964, -1.70105, -0.0763438, -1.03245, 1.74528, 0.285325, 0.782357, 1.08655, -0.196445, -1.62969, -0.415989, 0.698188, -1.36687, -0.592472, 0.695998, 1.30311, 0.652358, 0.87443, 0.711287, 0.954382, 0.461826, -1.4907, -1.48742, 0.520332, -0.832643, -1.67688, 0.343936, 0.838091, -0.059219, -0.728163, 1.36698, 1.06171, -0.722572, -0.884524, 1.73404, -0.433616, 0.478377, -1.48718, -0.609783, -0.535132, -1.48979, -0.432057, 1.01278, -0.237002, -0.963504, -0.473911, 0.118339, 0.932288, -0.710264, 1.67942, 0.404491, -0.719504, 0.787113, -0.136459, 1.81626, -0.965197, 0.225783, 1.68924, 0.47737, -0.492723, -1.67159, -1.07901, -0.314944, -1.55885, -1.19606, 0.283791, -1.49479, -1.86882, 0.346166, -0.120484, 1.42172, 0.636642, 0.591957, 1.5775, -0.0762434, 1.2134, 0.177578, -0.904202, 0.829775, 0.118877, 0.99602, 0.118854, -0.825699, 0.869851, -0.53065, -0.0605223, 0.227223, 1.94395, 0.303458, 0.166434, -1.94449, 1.9445, 0.166435, 0.3034, -1.57748, -0.0762419, 1.21338, 1.67163, -0.492636, -0.477569, -0.894102, -0.492069, 1.4905, 0.301229, -0.31692, 1.86975, 0.592375, 0.63657, 1.42164, 0.355457, -0.844658, -1.00749, 1.26718, 0.165352, -1.50807, 0.415989, 0.698188, -1.36687, 1.19613, 0.283613, 1.49487, -1.54271, -0.608275, 0.355769, -1.94145, -0.19754, -0.242491, -0.236321, 0.871709, 0.945469, -1.4902, 0.640459, 0.357354, -1.00764, -0.844624, -0.355373, 1.06171, -0.722571, 0.884523, 1.36694, -0.728184, 0.0591937, 1.31079, -0.372536, -1.31054, -1.18345, 0.576637, 1.12391, -0.300208, 0.404913, -1.8009, -0.478458, -0.433604, -1.73402, -0.297128, -0.965779, 0.415823 )

[sub_resource type="ConvexPolygonShape" id=5]
points = PoolVector3Array( 0.66424, 0.346606, 1.75066, -0.366733, -0.0769605, -1.95706, -0.365711, 0.106115, -1.95161, -1.95707, -0.076961, 0.366663, 0.829769, -0.904208, 0.177508, 1.06293, 0.811762, -0.472361, -0.945618, 0.871677, 0.236266, 1.88387, -0.137017, -0.60715, -0.943663, -0.840496, 0.530683, -0.607704, -0.137031, 1.88366, -0.415626, -0.727454, -1.30616, 1.07212, -0.491444, 1.36964, -1.70105, -0.0763438, -1.03245, 1.74528, 0.285325, 0.782357, 1.08655, -0.196445, -1.62969, -0.415989, 0.698188, -1.36687, -0.592472, 0.695998, 1.30311, 0.652358, 0.87443, 0.711287, 0.954382, 0.461826, -1.4907, -1.48742, 0.520332, -0.832643, -1.67688, 0.343936, 0.838091, -0.059219, -0.728163, 1.36698, 1.06171, -0.722572, -0.884524, 1.73404, -0.433616, 0.478377, -1.48718, -0.609783, -0.535132, -1.48979, -0.432057, 1.01278, -0.237002, -0.963504, -0.473911, 0.118339, 0.932288, -0.710264, 1.67942, 0.404491, -0.719504, 0.787113, -0.136459, 1.81626, -0.965197, 0.225783, 1.68924, 0.47737, -0.492723, -1.67159, -1.07901, -0.314944, -1.55885, -1.19606, 0.283791, -1.49479, -1.86882, 0.346166, -0.120484, 1.42172, 0.636642, 0.591957, 1.5775, -0.0762434, 1.2134, 0.177578, -0.904202, 0.829775, 0.118877, 0.99602, 0.118854, -0.825699, 0.869851, -0.53065, -0.0605223, 0.227223, 1.94395, 0.303458, 0.166434, -1.94449, 1.9445, 0.166435, 0.3034, -1.57748, -0.0762419, 1.21338, 1.67163, -0.492636, -0.477569, -0.894102, -0.492069, 1.4905, 0.301229, -0.31692, 1.86975, 0.592375, 0.63657, 1.42164, 0.355457, -0.844658, -1.00749, 1.26718, 0.165352, -1.50807, 0.415989, 0.698188, -1.36687, 1.19613, 0.283613, 1.49487, -1.54271, -0.608275, 0.355769, -1.94145, -0.19754, -0.242491, -0.236321, 0.871709, 0.945469, -1.4902, 0.640459, 0.357354, -1.00764, -0.844624, -0.355373, 1.06171, -0.722571, 0.884523, 1.36694, -0.728184, 0.0591937, 1.31079, -0.372536, -1.31054, -1.18345, 0.576637, 1.12391, -0.300208, 0.404913, -1.8009, -0.478458, -0.433604, -1.73402, -0.297128, -0.965779, 0.415823 )

[node name="Cloud" type="Area"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, -1.513 )
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, -1.513 )
shape = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="CollisionShape3" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 4 )

[node name="MeshInstance4" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 1.45364 )
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="CollisionShape4" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 1.45364 )
shape = SubResource( 5 )

[node name="DirectionalLight2" type="DirectionalLight" parent="."]
transform = Transform( 0.866025, 0.433013, 0.25, 0, -0.5, 0.866025, 0.5, -0.75, -0.433013, 3.59974, 3.65776, -6.83601 )
light_energy = 0.373
light_indirect_energy = 0.268
editor_only = true

[node name="DirectionalLight3" type="DirectionalLight" parent="."]
transform = Transform( -0.965926, -0.224144, -0.12941, 0.258819, -0.836516, -0.482963, 1.13133e-08, -0.5, 0.866025, -10.2977, -11.3277, 7.80529 )
light_energy = 0.373
light_indirect_energy = 0.268
editor_only = true

[node name="FartSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Cloud_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Cloud_body_exited"]
